--- a/calculator/style.css
+++ b/calculator/style.css
@@ -16,6 +16,7 @@ gitbody {
   font-family: sans-serif;
   font-size: 16px;
   color: #444444;
+  line-height: 20px;
   padding: 10px;
 }
 
@@ -90,6 +91,12 @@ span {
   padding: 0;
   cursor: pointer;
   transition: 0.1s all;
+}
+
+.button_sup {
+  font-size: 14px;
+  text-transform: lowercase;
+  vertical-align: 1.2em;
 }
 
 sup {
