--- a/shelter/pages/pets/petstyles.css
+++ b/shelter/pages/pets/petstyles.css
@@ -40,12 +40,26 @@
     line-height: 110%;
     letter-spacing: 0.06rem;
   }
+  .visually-hidden {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0, 0, 0, 0);
+    margin: -1px;
+  }
 
   .header {
     display: flex;
     width: 100%;
-    position: absolute;
-    top: 60px;
+    position: fixed;
+    top: 0;
+    background: #ffffff;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
   .header_container {
     display: flex;
@@ -63,7 +77,7 @@
     height: 60px;
   }
   .logo-title {
-    color: var(--main-color);
+    color: #545454;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 2rem;
     font-weight: 400;
@@ -71,11 +85,11 @@
     line-height: 35px;
   }
   .logo-subtitle {
-    color: #ffffff;
+    color: #292929;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 13px;
     font-weight: 400;
-    letter-spacing: 0.09rem;
+    letter-spacing: 0.08rem;
     line-height: 35px;
   }
   
@@ -97,24 +111,207 @@
   .item_link {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
+    font-weight: 500;
     line-height: 160%;
     text-decoration: none;
     outline: none;
   }
   .item_link_disabled {
-    color: #CDCDCD;
+    color: #545454;
   }
   .item_link_active {
-    color: #fafafa;
+    color: #292929;
     border-bottom: var(--main-color) solid 3px;
   }
   .item_link:hover {
-    color: #fafafa;
+    color: #292929;
   }
   
   .main {
     display: flex;
     flex-direction: column;
     width: 100%;
+    padding-top: 120px;
   }
   
+  .pets {
+    background: #F6F6F6;
+    display: flex;
+    width: 100%;
+    padding-top: 80px;
+    padding-bottom: 100px;
+  }
+  .pets__wrapper {
+    width: 1200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: auto;
+  }
+  .pets__content {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 60px 0;
+  }
+  .pets__title {
+    text-align: center;
+  }
+  .cards__container {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 45px auto;
+    /* padding-top: 15px; */
+  }
+  .pet__card {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 270px;
+    height: 435px;
+    background: #FAFAFA;
+    border-radius: 9px;
+    margin: 15px 0;
+    /* padding-bottom: 10px; */
+  }
+  .pet__card:hover {
+    cursor: pointer;
+    background: #ffffff;
+    box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
+  }
+  .pet__picture {
+    width: 270px;
+    height: 270px;
+    margin-bottom: 30px;
+    /* text-align: center; */
+  }
+  .pet__card__title {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
+    letter-spacing: 0.06em;
+    line-height: 23px;
+    color: #545454;
+    text-align: center;
+  }
+  .pet__card__button {
+    width: 187px;
+    height: 52px;
+    border: 2px solid #F1CDB3;
+    border-radius: 100px;
+    padding: auto;
+    color: #292929;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 17px;
+    letter-spacing: 0.06em;
+    margin: 30px auto;
+  }
+  .pet__card__button:hover {
+    background-color: #FDDCC4;
+    border: none;
+  }
+  .pets__nav__bar {
+    display: flex;
+    justify-content: space-between;
+    width: 340px;
+  }
+  .pets__nav__button {
+    width: 52px;
+    height: 52px;
+    border-radius: 100px;
+    text-align: center;
+    vertical-align: baseline;
+    color: #545454;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
+    line-height: 115%;
+    letter-spacing: 0.06rem;
+  }
+  .nav__active:hover {
+    cursor: pointer;
+  }
+  .nav__active {
+    border: 2px solid #F1CDB3;
+    color: #545454;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
+    line-height: 115%;
+    letter-spacing: 0.06rem;
+  } 
+  .nav__disabled {
+    border: 2px solid #CDCDCD;
+    color: #CDCDCD;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
+    line-height: 115%;
+    letter-spacing: 0.06rem;
+  } 
+  .page__number {
+    color: #292929;
+    background-color: #F1CDB3;
+    border: none;
+  }
+  .page__number:hover {
+    cursor: pointer;
+  }
+
+
+  .footer {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    background: url(../../assets/noise_transparent@2x.png), radial-gradient(110.67% 538.64% at 5.73% 50%, #513D2F 0%, #1A1A1C 100%), #211F20;
+    padding-top: 40px;
+  }
+  .footer__wrapper{
+    display: flex;
+    justify-content: space-between;
+    width: 1200px;
+  }
+  .footer_content {
+    display: flex;
+    justify-content: space-between;
+    width: 740px;
+    padding-top: 20px;
+  }
+  .footer__contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 280px;
+    height: 234px;
+    /* padding: 14px 0; */
+  }
+  .footer__title{
+    color: #ffffff;
+  }
+  .footer__icon {
+    height: 32px;
+    margin-right: 20px;
+  }
+  .footer__email, .footer__phone, .footer__address {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  .footer__link{
+    text-decoration: none; 
+    color: var(--main-color);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
+    letter-spacing: 0.08rem;
+  }
+  .footer__location {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 234px;
+    width: 302px;
+  }
+  .footer__img {
+    display: block;
+  }
