--- a/shelter/pages/main/mainstyles.css
+++ b/shelter/pages/main/mainstyles.css
@@ -1,20 +1,19 @@
 :root {
   --main-color: #F1CDB3;
-
   font-size: 16px;
 }
 
 * {
   box-sizing: border-box;
 }
-
+  
 html, body {
   width: 100vw;
   height: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
-
 body {
   font-family: Georgia, 'Times New Roman', Times, serif, Arial, Helvetica, sans-serif;
   /* padding-top: 120px; */
@@ -52,7 +51,9 @@ h5 {
   clip: rect(0, 0, 0, 0);
   margin: -1px;
 }
-
+span {
+  display: block;
+}
 .header {
   display: flex;
   width: 100%;
@@ -133,19 +134,20 @@ h5 {
 .hero {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: auto;
   padding-top: 180px;
   background: url(../../assets/noise_transparent@2x.png), radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20; 
-  
 }
 .hero__wrapper {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   width: 1200px;
   margin: auto;
   /* overflow: hidden; */
 }
+
 .hero-content {
   display: flex;
   flex-direction: column;
@@ -239,7 +241,7 @@ button:hover {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  width: 1200px;
+  width: 75rem;
   margin: auto;
 }
 .friends__title {
@@ -359,7 +361,9 @@ button:hover {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding-top: 32px;
+  align-items: center;
+  width: 100%;
+  padding-top: 2rem;
 }
 .icons__item_container {
   display: flex;
@@ -389,7 +393,8 @@ button:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 1200px;
+  /* width: 1200px; */
+  max-width: 75rem;
 }  
 .donation__img {
   /* display: flex; */
@@ -504,10 +509,609 @@ button:hover {
   height: 234px;
   width: 302px;
 }
-
 .footer__img {
   display: block;
   /* position: relative; */
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+.header {
+  display: flex;
+  width: 100%;
+  position: absolute;
+  top: 30px;
+}
+.header_container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 48rem;
+  padding: 0 30px;
+  margin: 0 auto;
+  height: 60px;
+}
+.hero {
+  display: flex;
+  width: 100%;
+  /* height: auto; */
+  padding-top: 150px;
+  background: url(../../assets/noise_transparent@2x.png), radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20; 
+}
+.hero__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  max-width: 92%;
+  margin: auto;
+}
+.hero-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-bottom: 100px;
+}
+.hero__button {
+  width: 207px;
+  height: 52px;
+  align-self: center;
+  border-radius: 100px;
+  border: 0;
+  padding: 15px 45px;
+  background-color: var(--main-color);
+  color: #292929;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 17px;
+  letter-spacing: 1px;
+}
+.hero-img {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+.hero__img__content {
+  width: 569px;
+  /* width: 75vw; */
+}
+.about {
+  display: flex;
+  width: 100%;
+  padding-top: 80px;
+  padding-bottom: 100px;
+}
+.about__wrapper{
+  display: flex;
+  flex-direction: column-reverse;
+  align-content: space-between;
+  align-items: center;
+  max-width: 92%;
+  margin: auto;
+  padding: 0 55px;
+}
+.about__img {
+  display: flex;
+}
+.about__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 430px;
+  height: 380px;
+  padding: 0;
+  margin-bottom: 80px; 
+}
+.friends {
+  display: flex;
+  width: 100%;
+  background: #F6F6F6;
+  padding-top: 80px;
+  padding-bottom: 100px;
+}
+.friends__wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 92%;
+  margin: auto;
+  /* padding: 40px 0; */
+}
+/* .friends__img__wrapper {
+  overflow: hidden;
+} */
+.pet__card {
+  margin: 0 20px; 
+  order: 2; 
+}
+.pet__tablet {
+  display: none;
+}
+.pet__slider__arrow {
+  width: 52px;
+  height: 52px;
+  border: 2px solid #F1CDB3;
+  border-radius: 100px;
+  text-align: center;
+}
+.pet__slider__arrow:hover {
+  background-color: #FDDCC4;
+  border: none;
+}
+.arrow__right {
+  transform: rotate(180deg);
+  margin: 0px 0px 0px -8px;
+  order: 3; 
+}
+.arrow__left{
+  margin: 0px -8px 0px 0px;
+  order: 1; 
+}
+.help {
+  display: flex;
+  width: 100%;
+  padding-top: 80px;
+  padding-bottom: 73px;
+}
+.help__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 92%;
+  margin: auto;
+}
+.icons__wrapper {
+  display: flex;
+  width: 90%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  /* padding-top: 32px; */
+}
+.icons__item_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  /* width: 170px; */
+  height: 113px;
+  /* margin: 27.5px 30px; */
+  margin: 27.5px 0;
+  width: 28%;
+  /* height: 140.5px; */
+  text-align: center;
+}
+.donation {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background: #F6F6F6;
+  padding-top: 80px;
+  padding-bottom: 38px;
+}
+.donation__wrapper{
+  display: flex;
+  flex-direction: column-reverse;
+  align-content: space-between;
+  align-items: center;
+  max-width: 92%;
+}  
+.donation__img {
+  margin: 58px 15px;
+  padding-top: 1px;
+}
+.donation__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 380px;
+  min-height: 282px;
+  margin: 1px 15px;
+}
+.footer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background: url(../../assets/noise_transparent@2x.png), radial-gradient(110.67% 538.64% at 5.73% 50%, #513D2F 0%, #1A1A1C 100%), #211F20;
+  padding-top: 11px;
+}
+.footer__wrapper{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 92%;
+}
+.footer_content {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 34px 0 34px;
+  margin-bottom: 60px;
   
+}
+.footer__contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 280px;
+  height: 234px;
+}
+.footer__img__container {
+  display: flex;
+  margin-top: 2px;
+  padding-top: 2px;
+  /* position: relative; */
+}
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  span {
+    display: inline;
+  }
+ .header {
+   display: flex;
+   justify-content: flex-start;
+   width: 100%;
+   position: absolute;
+   padding-right: 57px;
+   padding-left: 3%;
+   top: 30px;
+ }
+ .header_container {
+  width: 100%; 
+ }
+ .menu {
+  display: none;
+}
+.hero {
+  display: flex;
+  width: 100%;
+  padding-top: 150px;
+  background: url(../../assets/noise_transparent@2x.png), radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20; 
+}
+.hero__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  max-width: 93.75%;
+  margin: auto;
+}
+.hero-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* margin-bottom: 105px; */
+  padding-bottom: 106px;
+}
+.hero-title {
+  width: 80%;
+  height: auto;
+  color: #fff;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 25px;
+  line-height: 130%;
+  text-align: center;
+  letter-spacing: 0.06em;
+}
+.hero-subtitle {
+  width: 100%;
+  height: auto;
+  color:#CDCDCD;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  line-height: 160%;
+  margin: 42px 0;
+  text-align: center;
+}
+.hero-img {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+.hero__img__content {
+  width: 260px;
+}
+.about {
+  display: flex;
+  width: 100%;
+  padding-top: 42px;
+  padding-bottom: 0;
+}
+.about__wrapper{
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  width: 93.75%;
+  margin: auto;
+  padding: 0 15px;
+}
+.about__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  padding: 0;
+  margin-bottom: 20px; 
+  text-align: center;
+}
+.about__title {
+  width: 100%;
+  font-size: 25px;
+  letter-spacing: 0.06em;
+  padding-bottom: 25px;
+}
+.about__text {
+  width: 100%;
+  color: #4C4C4C;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  line-height: 160%;
+  text-align: justify;
+  padding-bottom: 22px;
+  /* margin: 42px 0; */
+}
+.about__img {
+  display: flex;
+  width: 260px;
+  padding-bottom: 42px;
+}
+.friends {
+  display: flex;
+  width: 100%;
+  background: #F6F6F6;
+  padding-top: 42px;
+  padding-bottom: 42px;
+}
+.friends__wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 93.75%;
+  margin: auto;
+}
+.pet__card {
+  margin: 0 auto; 
+  order: 1; 
+}
+.friends__title {
+  font-size: 25px;
+  text-align: center;
+  width: 97%;
+}
+.friends__img__wrapper {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 42px 0 21px 0;
+}
+.pet__tablet, .pet__mobile{
+  display: none;
+}
+.pet__slider__arrow {
+  width: 52px;
+  height: 52px;
+  border: 2px solid #F1CDB3;
+  border-radius: 100px;
+  text-align: center;
+}
+.arrow__right {
+  transform: rotate(180deg);
+  margin: 20px 58px 20px 40px;
+  order: 2; 
+}
+.arrow__left{
+  margin: 20px 40px 20px 58px;
+  order: 2;
+}
+.help {
+  display: flex;
+  width: 100%;
+  padding-top: 42px;
+  padding-bottom: 0;
+}
+.help__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 93.75%;
+  margin: 0 auto;
+}
+.help__title {
+  color: #545454;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 25px;
+  text-align: center;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+  padding: 0 15px;
+  width: 85%;
+}
+.icons__wrapper {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding-top: 1.7rem;
+  padding-bottom: 27px;
+}
+.icons__item_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin: 15px 0;
+  width: 47%;
+  height: 87px;
+  text-align: center;
+}
+.icons__item__img {
+  width: 50px;
+  height: 50px;
+}
+.icons__title {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 15px;
+  line-height: 110%;
+  letter-spacing: 0.06em;
+}
+.donation {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background: #F6F6F6;
+  padding-top: 42px;
+  padding-bottom: 40px;
+}
+.donation__wrapper{
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 93.75%;
+}  
+.donation__img {
+  width: 260px;    
+  padding-top: 22px;
+  /* margin: 58px 15px;
+  padding-top: 1px; */
+}
+.donation__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  margin: 0;
+  padding: 0 10px;
+  align-items: center;
+  min-height: auto;
+}
+.donation__title {
+  width: 80%;
+  font-size: 25px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+  text-align: center;
+}
+.donation__subtitle {
+  width: 300px;
+  color: #4C4C4C;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  line-height: 160%; 
+  letter-spacing: 0rem;
+  margin: 20px 0; 
+  text-align: center;
+}
+.donation__card {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 280px;
+  background-color: var(--main-color);
+  border-radius: 9px;
+}
+.donation_card_icon{
+  width: 30px;
+}
+.donation__card__link { 
+  text-decoration: none; 
+  color: #545454;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 15px;
+  line-height: 110%;
+  letter-spacing: 0.06rem;
+}
+.donation__info {
+  color:#B2B2B2;
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 150%;
+  text-align: justify;
+  width: 100%;
+  margin: 20px 0; 
+}
+.footer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background: url(../../assets/noise_transparent@2x.png), radial-gradient(110.67% 538.64% at 5.73% 50%, #513D2F 0%, #1A1A1C 100%), #211F20;
+  padding-top: 1.875rem;
+}
+.footer__wrapper{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+}
+.footer_content {
+  display: flex;
+  flex-direction: column;
+  /* flex-wrap: wrap; */
+  justify-content: center;
+  margin: 0 auto;
+  width: 93%;
+  padding-top: 0;
+}
+.footer__contact, .footer__location {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* text-align: center; */
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+}
+.footer__title{
+  color: #ffffff;
+  font-size: 25px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+  text-align: center;
+  margin-bottom: 40px;
+  width: 90%;
+  }
+.footer__icon {
+  height: 32px;
+  margin-right: 20px;
+}
+.footer__email, .footer__phone {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 37px;
+  width: 100%;
+}
+.footer__address {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 37px;
+  width: 100%;
+}
+.footer__link{
+  text-decoration: none; 
+  color: var(--main-color);
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 20px;
+  /* line-height: 115%; */
+  letter-spacing: 0.08rem;
+  text-align: left;
+}
+.footer__img__container {
+  display: flex;
+  width: 100%;
+}
+.footer__img {
+  /* display: block; */
+  width: 260px;
+  margin: 0 auto;
+}
+
 }
 
